[gd_scene load_steps=34 format=4 uid="uid://c6ahriwt65j3v"]

[ext_resource type="Script" uid="uid://x7n86vpq3thr" path="res://DummyStage/Scripts/DummyStage.gd" id="1_sw623"]
[ext_resource type="PackedScene" uid="uid://wsvdb4844wue" path="res://DummyStage/HealthEntity/Scenes/health_point.tscn" id="2_pbpva"]
[ext_resource type="PackedScene" uid="uid://c5r8q43l8n4wv" path="res://DummyStage/HealthEntity/Scenes/enemy_health_point.tscn" id="3_gfpmg"]
[ext_resource type="Texture2D" uid="uid://kll6eu4dqu2" path="res://PotatomousStage/Art/SnowWorldSky.png" id="4_522cq"]
[ext_resource type="Texture2D" uid="uid://c7bagfx6uqf4j" path="res://PotatomousStage/Art/SnowWorldMountain.png" id="5_ltgny"]
[ext_resource type="Texture2D" uid="uid://dp2nkj2u14jm3" path="res://PotatomousStage/Art/SnowWorldTrees.png" id="6_apq1w"]
[ext_resource type="Texture2D" uid="uid://b67sbjlc1aso4" path="res://DummyStage/Art/Dummy.png" id="7_32xvb"]
[ext_resource type="Texture2D" uid="uid://b87agox7txjne" path="res://PotatomousStage/Art/door.png" id="8_n5c42"]
[ext_resource type="PackedScene" uid="uid://m7u5e3x6nme8" path="res://Player/Scenes/player.tscn" id="9_sn4r2"]
[ext_resource type="PackedScene" uid="uid://byl54ccipdep8" path="res://DummyStage/Stages/Stage1.tscn" id="10_lc41a"]
[ext_resource type="Theme" uid="uid://tufc51t2fgr3" path="res://PotatomousStage/Art/progressbar.tres" id="11_02xmv"]
[ext_resource type="PackedScene" uid="uid://dsq6mo513rph1" path="res://DummyStage/Stages/Stage2.tscn" id="11_itiyf"]
[ext_resource type="Texture2D" uid="uid://0w16ewy8kwre" path="res://PotatomousStage/Art/TempBackground.png" id="12_ib1ub"]
[ext_resource type="PackedScene" uid="uid://dho260u3hlx7y" path="res://DummyStage/Stages/Stage3.tscn" id="12_kvhkk"]
[ext_resource type="PackedScene" uid="uid://d3ea4ojcynk3e" path="res://DummyStage/Stages/Stage4.tscn" id="13_uofca"]
[ext_resource type="PackedScene" uid="uid://cxhirmhnvqi3c" path="res://TransitionScene/Scenes/transition_intro.tscn" id="13_wmxd7"]
[ext_resource type="Texture2D" uid="uid://b3fxyt3swa7ki" path="res://TileScene/Art/IStoleThisFromJayLeno.png" id="14_1afhe"]
[ext_resource type="PackedScene" uid="uid://m6ergketv1hm" path="res://DummyStage/Stages/Stage5.tscn" id="14_l3nfr"]
[ext_resource type="PackedScene" uid="uid://nvhi0qef5oyy" path="res://DummyStage/Stages/Stage6.tscn" id="16_ne8m5"]
[ext_resource type="PackedScene" uid="uid://d1keso74oo0th" path="res://DummyStage/Stages/Stage7.tscn" id="17_ne8m5"]
[ext_resource type="PackedScene" uid="uid://ce68vglprp7kd" path="res://DummyStage/Stages/Stage8.tscn" id="18_52q84"]
[ext_resource type="PackedScene" uid="uid://0617qxa41tvx" path="res://DummyStage/Stages/Stage9.tscn" id="19_dgejx"]
[ext_resource type="PackedScene" uid="uid://blv765dekni3c" path="res://DummyStage/Stages/Stage10.tscn" id="20_1kl4v"]
[ext_resource type="PackedScene" uid="uid://c1475k8qier30" path="res://DummyStage/Stages/Stage11.tscn" id="21_cps7s"]
[ext_resource type="PackedScene" uid="uid://cwkrlcnnlj43k" path="res://DummyStage/Stages/Stage12.tscn" id="22_cps7s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_waejo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilxdt"]
atlas = ExtResource("8_n5c42")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0xp3"]
atlas = ExtResource("8_n5c42")
region = Rect2(32, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_txvqw"]
atlas = ExtResource("8_n5c42")
region = Rect2(64, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofkun"]
atlas = ExtResource("8_n5c42")
region = Rect2(96, 48, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ksbdr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilxdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0xp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txvqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofkun")
}],
"loop": true,
"name": &"Portal",
"speed": 8.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fr38o"]
texture = ExtResource("14_1afhe")
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
9:1/0/physics_layer_0/polygon_0/one_way = true
9:1/0/physics_layer_0/polygon_0/one_way_margin = 8.0
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0/physics_layer_0/polygon_0/one_way = true
10:1/0/physics_layer_0/polygon_0/one_way_margin = 8.0
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
11:1/0/physics_layer_0/polygon_0/one_way = true
11:1/0/physics_layer_0/polygon_0/one_way_margin = 8.0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/z_index = -1
3:2/0 = 0
3:2/0/z_index = -1
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
11:2/0 = 0
16:2/0 = 0
16:2/0/z_index = -1
17:2/0 = 0
17:2/0/z_index = -1
18:2/0 = 0
18:2/0/z_index = -1
19:2/0 = 0
19:2/0/z_index = -1
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/z_index = -1
3:3/0 = 0
3:3/0/z_index = -1
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0/physics_layer_0/polygon_0/one_way = true
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0/physics_layer_0/polygon_0/one_way = true
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0/physics_layer_0/polygon_0/one_way = true
16:3/0 = 0
16:3/0/z_index = -1
17:3/0 = 0
17:3/0/z_index = -1
18:3/0 = 0
18:3/0/z_index = -1
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/z_index = -1
3:4/0 = 0
3:4/0/z_index = -1
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
16:4/0 = 0
16:4/0/z_index = -1
18:4/0 = 0
18:4/0/z_index = -1
19:4/0 = 0
19:4/0/z_index = -1
20:4/0 = 0
20:4/0/z_index = -1
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
18:5/0 = 0
18:5/0/z_index = -1
20:5/0 = 0
20:5/0/z_index = -1
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
2:7/0 = 0
2:7/0/z_index = -1
3:7/0 = 0
3:7/0/z_index = -1
4:7/0 = 0
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
2:8/0 = 0
2:8/0/z_index = -1
3:8/0 = 0
3:8/0/z_index = -1
4:8/0 = 0
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
11:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
11:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
11:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
20:13/0 = 0
20:13/0/z_index = -1
21:13/0 = 0
22:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
20:14/0 = 0
20:14/0/z_index = -1
21:14/0 = 0
22:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
18:16/0/z_index = -1
19:16/0 = 0
19:16/0/z_index = -1
20:16/0 = 0
20:16/0/z_index = -1
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
23:16/0/z_index = -1
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
12:1/0 = 0
12:2/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:9/0 = 0
19:9/0/z_index = -1
20:9/0 = 0
20:9/0/z_index = -1
19:10/0 = 0
19:10/0/z_index = -1
20:10/0 = 0
20:10/0/z_index = -1
20:11/0 = 0
20:11/0/z_index = -1
19:11/0 = 0
19:11/0/z_index = -1
7:6/0 = 0
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
22:11/0 = 0
22:11/0/z_index = -1
23:11/0 = 0
23:11/0/z_index = -1
23:10/0 = 0
23:10/0/z_index = -1
22:10/0 = 0
22:10/0/z_index = -1
21:10/0 = 0
21:10/0/z_index = -1
21:11/0 = 0
21:11/0/z_index = -1
21:9/0 = 0
21:9/0/z_index = -1
22:9/0 = 0
22:9/0/z_index = -1
23:9/0 = 0
23:9/0/z_index = -1
21:8/0 = 0
21:8/0/z_index = -1
22:8/0 = 0
22:8/0/z_index = -1
18:15/0 = 0
18:15/0/z_index = -1
19:15/0 = 0
19:15/0/z_index = -1
18:17/0 = 0
18:17/0/z_index = -1
19:17/0 = 0
19:17/0/z_index = -1
16:5/0 = 0
16:5/0/z_index = -1
17:5/0 = 0
17:5/0/z_index = -1
17:4/0 = 0
17:4/0/z_index = -1
20:2/0 = 0
20:2/0/z_index = -1
21:2/0 = 0
21:2/0/z_index = -1
22:2/0 = 0
22:2/0/z_index = -1
23:3/0 = 0
23:3/0/z_index = -1
23:4/0 = 0
23:4/0/z_index = -1
23:5/0 = 0
23:5/0/z_index = -1
22:5/0 = 0
22:5/0/z_index = -1
21:5/0 = 0
21:5/0/z_index = -1
21:4/0 = 0
21:4/0/z_index = -1
22:4/0 = 0
22:4/0/z_index = -1
22:3/0 = 0
22:3/0/z_index = -1
21:3/0 = 0
21:3/0/z_index = -1
20:3/0 = 0
20:3/0/z_index = -1
19:3/0 = 0
19:3/0/z_index = -1
19:5/0 = 0
19:5/0/z_index = -1
22:1/0 = 0
22:1/0/z_index = -1
21:1/0 = 0
21:1/0/z_index = -1
21:0/0 = 0
21:0/0/z_index = -1
22:0/0 = 0
22:0/0/z_index = -1
20:1/0 = 0
20:1/0/z_index = -1
20:17/0 = 0
20:17/0/z_index = -1
21:17/0 = 0
21:17/0/z_index = -1
22:17/0 = 0
22:17/0/z_index = -1
23:17/0 = 0
23:17/0/z_index = -1
19:14/0 = 0
19:14/0/z_index = -1
18:14/0 = 0
18:14/0/z_index = -1
18:13/0 = 0
18:13/0/z_index = -1
19:13/0 = 0
19:13/0/z_index = -1
19:12/0 = 0
19:12/0/z_index = -1
18:12/0 = 0
18:12/0/z_index = -1
20:12/0 = 0
20:12/0/z_index = -1
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:6/0 = 0
17:6/0 = 0
17:6/0/z_index = -1
18:6/0 = 0
18:6/0/z_index = -1
18:7/0 = 0
18:7/0/z_index = -1
19:7/0 = 0
19:7/0/z_index = -1
20:7/0 = 0
20:7/0/z_index = -1
21:7/0 = 0
21:7/0/z_index = -1
22:7/0 = 0
22:7/0/z_index = -1
21:6/0 = 0
21:6/0/z_index = -1
22:6/0 = 0
22:6/0/z_index = -1
20:6/0 = 0
20:6/0/z_index = -1
19:6/0 = 0
19:6/0/z_index = -1
16:7/0 = 0
16:7/0/z_index = -1
17:7/0 = 0
17:7/0/z_index = -1
15:3/0 = 0
15:3/0/z_index = -1
14:3/0 = 0
14:3/0/z_index = -1
14:2/0 = 0
14:2/0/z_index = -1
15:2/0 = 0
15:2/0/z_index = -1
9:7/0 = 0
10:7/0 = 0
0:4/0 = 0
0:3/0 = 0
0:2/0 = 0
0:1/0 = 0
0:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
7:1/0 = 0
7:0/0 = 0
8:1/0 = 0
8:0/0 = 0
9:0/0 = 0
5:3/0 = 0
5:4/0 = 0
6:5/0 = 0
6:6/0 = 0
6:7/0 = 0
7:7/0 = 0
7:5/0 = 0
7:4/0 = 0
8:4/0 = 0
8:5/0 = 0
8:6/0 = 0
9:6/0 = 0
8:7/0 = 0
10:6/0 = 0
10:5/0 = 0

[sub_resource type="TileSet" id="TileSet_52q84"]
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = ""
custom_data_layer_0/type = 0
sources/0 = SubResource("TileSetAtlasSource_fr38o")

[node name="DummyStage" type="Node2D"]
script = ExtResource("1_sw623")
hpEntity = ExtResource("2_pbpva")
enemyHPEntity = ExtResource("3_gfpmg")

[node name="NightSky" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(960, 416)
scale = Vector2(4, 4)
texture = ExtResource("4_522cq")

[node name="Mountains" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(960, 488)
scale = Vector2(4, 4)
texture = ExtResource("5_ltgny")

[node name="Trees" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(960, 368)
scale = Vector2(4, 4)
texture = ExtResource("6_apq1w")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Dummy" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(1736, 752)
scale = Vector2(4, 4)
texture = ExtResource("7_32xvb")

[node name="Area2D" type="Area2D" parent="Dummy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dummy/Area2D"]
shape = SubResource("CircleShape2D_waejo")
disabled = true

[node name="EndPoint" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1830, 308)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ksbdr")
animation = &"Portal"
autoplay = "Portal"

[node name="Area2D" type="Area2D" parent="EndPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndPoint/Area2D"]
shape = SubResource("CircleShape2D_waejo")

[node name="Player" parent="." instance=ExtResource("9_sn4r2")]
position = Vector2(88, 316)
scale = Vector2(4, 4)

[node name="BaseLayer" parent="." instance=ExtResource("10_lc41a")]
tile_map_data = PackedByteArray("AAAWABYAAAAEAAYAAAAXABYAAAAEAAYAAAAYABYAAAAEAAYAAAAZABYAAAAEAAYAAAAaABYAAAAEAAYAAAAbABYAAAAEAAYAAAAcABYAAAAEAAYAAAAdABYAAAAEAAYAAAAVABYAAAAEAAYAAAAUABYAAAAEAAYAAAATABYAAAAEAAYAAAASABYAAAAEAAYAAAARABYAAAAEAAYAAAAQABYAAAAEAAYAAAAPABYAAAAEAAYAAAAOABYAAAAEAAYAAAANABYAAAAEAAYAAAAMABYAAAAEAAYAAAALABYAAAAEAAYAAAAKABYAAAAEAAYAAAAJABYAAAAEAAYAAAAIABYAAAAEAAYAAAAHABYAAAAEAAYAAAAGABYAAAAEAAYAAAAFABYAAAAEAAYAAAAEABYAAAAEAAYAAAADABYAAAAEAAYAAAACABYAAAAEAAYAAAABABYAAAAEAAYAAAAAABYAAAAEAAYAAAABABMAAAAEAAYAAAAAABMAAAAEAAYAAAACABMAAAAEAAYAAAADABMAAAAEAAYAAAAEABMAAAAEAAYAAAAFABMAAAAEAAYAAAAGABMAAAAEAAYAAAASABMAAAAEAAYAAAATABMAAAAEAAYAAAAUABMAAAAEAAYAAAAVABMAAAAEAAYAAAAWABMAAAAEAAYAAAAXABMAAAAEAAYAAAAYABMAAAAEAAYAAAAZABMAAAAEAAYAAAAaABMAAAAEAAYAAAAbABMAAAAEAAYAAAAcABMAAAAEAAYAAAAdABMAAAAEAAYAAAAAABQAAAAEAAYAAAABABQAAAAEAAYAAAACABQAAAAEAAYAAAADABQAAAAEAAYAAAAEABQAAAAEAAYAAAAFABQAAAAEAAYAAAAGABQAAAAEAAYAAAAHABQAAAAEAAYAAAAIABQAAAAEAAYAAAAJABQAAAAEAAYAAAAKABQAAAAEAAYAAAALABQAAAAEAAYAAAAMABQAAAAEAAYAAAANABQAAAAEAAYAAAAOABQAAAAEAAYAAAAPABQAAAAEAAYAAAAQABQAAAAEAAYAAAARABQAAAAEAAYAAAASABQAAAAEAAYAAAATABQAAAAEAAYAAAAUABQAAAAEAAYAAAAVABQAAAAEAAYAAAAWABQAAAAEAAYAAAAXABQAAAAEAAYAAAAYABQAAAAEAAYAAAAZABQAAAAEAAYAAAAaABQAAAAEAAYAAAAbABQAAAAEAAYAAAAcABQAAAAEAAYAAAAdABQAAAAEAAYAAAAAABUAAAAEAAYAAAABABUAAAAEAAYAAAACABUAAAAEAAYAAAADABUAAAAEAAYAAAAEABUAAAAEAAYAAAAFABUAAAAEAAYAAAAGABUAAAAEAAYAAAAHABUAAAAEAAYAAAAIABUAAAAEAAYAAAAJABUAAAAEAAYAAAAKABUAAAAEAAYAAAALABUAAAAEAAYAAAAMABUAAAAEAAYAAAANABUAAAAEAAYAAAAOABUAAAAEAAYAAAAPABUAAAAEAAYAAAAQABUAAAAEAAYAAAARABUAAAAEAAYAAAASABUAAAAEAAYAAAATABUAAAAEAAYAAAAUABUAAAAEAAYAAAAVABUAAAAEAAYAAAAWABUAAAAEAAYAAAAXABUAAAAEAAYAAAAYABUAAAAEAAYAAAAZABUAAAAEAAYAAAAaABUAAAAEAAYAAAAbABUAAAAEAAYAAAAcABUAAAAEAAYAAAAdABUAAAAEAAYAAAAKABMAAAAEAAYAAAALABMAAAAEAAYAAAAMABMAAAAEAAYAAAAOABMAAAAEAAYAAAANABMAAAAEAAYAAAAPABMAAAAEAAYAAAAQABMAAAAEAAYAAAARABMAAAAEAAYAAAAHABMAAAAEAAYAAAAIABMAAAAEAAYAAAAJABMAAAAEAAYAAAD//xEAAAAAAAEAAAD//xAAAAAAAAEAAAD//w8AAAAAAAEAAAD//w4AAAAAAAEAAAD//w0AAAAAAAEAAAD//wwAAAAAAAEAAAD//wsAAAAAAAEAAAD//woAAAAAAAEAAAD//wkAAAAAAAEAAAD//wgAAAAAAAEAAAD//wcAAAAAAAEAAAD//wYAAAAAAAEAAAD//wUAAAAAAAEAAAAeAAYAAAAAAAEAAAAeAAcAAAAAAAEAAAAeAAgAAAAAAAEAAAAeAAwAAAAAAAEAAAAeAA0AAAAAAAEAAAAeAA4AAAAAAAEAAAAeAA8AAAAAAAEAAAAeABAAAAAAAAEAAAD//xIAAAAAAAEAAAD//xQAAAAAAAEAAAD//xUAAAAAAAEAAAD//xYAAAAAAAEAAAAeABYAAAAAAAEAAAAeABUAAAAAAAEAAAAeABQAAAAAAAEAAAAeABMAAAAAAAEAAAD//xcAAAAAAAEAAAAAABcAAAACAAEAAAABABcAAAACAAEAAAACABcAAAACAAEAAAADABcAAAACAAEAAAAEABcAAAACAAEAAAAFABcAAAACAAEAAAAGABcAAAACAAEAAAAHABcAAAACAAEAAAAIABcAAAACAAEAAAAJABcAAAACAAEAAAAKABcAAAACAAEAAAALABcAAAACAAEAAAAMABcAAAACAAEAAAANABcAAAACAAEAAAAOABcAAAACAAEAAAAPABcAAAACAAEAAAAQABcAAAACAAEAAAARABcAAAACAAEAAAASABcAAAACAAEAAAATABcAAAACAAEAAAAUABcAAAACAAEAAAAVABcAAAACAAEAAAAWABcAAAACAAEAAAAXABcAAAACAAEAAAAYABcAAAACAAEAAAAZABcAAAACAAEAAAAaABcAAAACAAEAAAAbABcAAAACAAEAAAAcABcAAAACAAEAAAAdABcAAAACAAEAAAAeABcAAAAAAAEAAAD//wQAAAAAAAEAAAD//wMAAAAAAAEAAAD//wEAAAAAAAEAAAAAAAEAAAACAAIAAAABAAEAAAACAAIAAAACAAEAAAACAAIAAAADAAEAAAACAAIAAAAEAAEAAAACAAIAAAD//wIAAAAAAAEAAAAGAAEAAAACAAIAAAAHAAEAAAACAAIAAAAIAAEAAAACAAIAAAAJAAEAAAACAAIAAAAKAAEAAAACAAIAAAAFAAEAAAACAAIAAAALAAEAAAACAAIAAAAMAAEAAAACAAIAAAANAAEAAAACAAIAAAAOAAEAAAACAAIAAAAPAAEAAAACAAIAAAAQAAEAAAACAAIAAAARAAEAAAACAAIAAAASAAEAAAACAAIAAAATAAEAAAACAAIAAAAUAAEAAAACAAIAAAAVAAEAAAACAAIAAAAWAAEAAAACAAIAAAAXAAEAAAACAAIAAAAYAAEAAAACAAIAAAAZAAEAAAACAAIAAAAbAAEAAAACAAIAAAAcAAEAAAACAAIAAAAdAAEAAAACAAIAAAAeAAEAAAAAAAEAAAAeAAIAAAAAAAEAAAAeAAMAAAAAAAEAAAAeAAQAAAAAAAEAAAD//xMAAAAAAAEAAAAeAAUAAAAAAAEAAAAeAAkAAAAAAAEAAAAeAAoAAAAAAAEAAAAeAAsAAAAAAAEAAAAeABIAAAAAAAEAAAAeABEAAAAAAAEAAAD//xgAAAAAAAIAAAAeABgAAAAAAAIAAAD//wAAAAABAAAAAAAeAAAAAAABAAAAAAAaAAEAAAACAAIAAAA=")
enabled = true

[node name="Stage1" parent="." instance=ExtResource("10_lc41a")]

[node name="Stage2" parent="." instance=ExtResource("11_itiyf")]

[node name="Stage3" parent="." instance=ExtResource("12_kvhkk")]

[node name="Stage4" parent="." instance=ExtResource("13_uofca")]

[node name="Stage5" parent="." instance=ExtResource("14_l3nfr")]
tile_set = SubResource("TileSet_52q84")

[node name="Stage6" parent="." instance=ExtResource("16_ne8m5")]

[node name="Stage7" parent="." instance=ExtResource("17_ne8m5")]

[node name="Stage8" parent="." instance=ExtResource("18_52q84")]

[node name="Stage9" parent="." instance=ExtResource("19_dgejx")]

[node name="Stage10" parent="." instance=ExtResource("20_1kl4v")]

[node name="Stage11" parent="." instance=ExtResource("21_cps7s")]

[node name="Stage12" parent="." instance=ExtResource("22_cps7s")]
enabled = false

[node name="ProgressBar" type="ProgressBar" parent="."]
texture_filter = 1
offset_top = 984.0
offset_right = 1920.0
offset_bottom = 1056.0
size_flags_vertical = 8
theme = ExtResource("11_02xmv")
show_percentage = false

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 540)
texture = ExtResource("12_ib1ub")

[node name="TransitionIntro" parent="." instance=ExtResource("13_wmxd7")]
position = Vector2(960, 540)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Dummy/Area2D" to="." method="_on_area_2d_body_entered_dummy"]
[connection signal="body_entered" from="EndPoint/Area2D" to="." method="_on_area_2d_body_entered"]
